* Aug 27 2001 hship

doc:
- Get the Developer's Guide up-to date with respect to yesterday's
  changes

* Aug 26 2001 hship

framework:
- Add initial support for configuring properties of helper beans
- Add <set-property>, <static-value> and <property-value> to the
  Tapestry 1.1 DTD
- Change the Inspector's ShowLogging view to use an initialized
  helper bean

* Aug 26 2001 hship

framework:
- Remove ILifecycle interface, related methods on IPage and elsewhere
- Add new event listener methods on IPage (to replace ILifecycle) with
  finer granularity
- Convert components from ILifecycle to PageRenderListener, PageDetachListener, etc.

vlib:
- Convert Browser from ILifecycle to PageDetachListener

documentation:
- Describe helper beans, and the <bean> and <reserved-parameter>
  elements of the component specification.
  
* Aug 24 2001 hship

framework:
- Improve toString() in a few classes
- Add <reserved-parameter> element to component specification
- Revise code here and there to ignore informal parameters
  (in the component specification, or from the HTML template)
  that conflict against reserved names (names of foral parameters,
  or names specified using <reserved-parameter>).
- Modify many component specifications, adding <reserved-parameter>
  elements
- Update framework version to 1.0.5
  
vlib:
- Display proper header graphic on the View Book page.

* Aug 24 2001 hship

JBE:
- Upgrade to DocBook XSL 1.44

* Aug 23 2001 hship

framework:
- Fix Javadoc errors and improve documentation.
- Clean up JanitorTask and ICleanup a bit.
- NumericField can now work when its value is
  bound to null, it reads the property type through
  the binding.
- Bunch of fixes to support NumericField, such as adding
  IBinding.getType().
- Change the page loader to check for, and prevent, components
  from implementing IPage (since that can screw a bunch of
  things up).


tutorial:
- Fix minor issue in valid tutorial (Home.sortMode was resetting to NONE not USER).

vlib: