@@ -10,6 +10,7 @@
   
   <component id="border" type="Border">
     <static-binding name="title">Edit Publishers</static-binding>
+    <field-binding name="simpleTitle" field-name="Boolean.TRUE"/>
   </component>
   
   <component  id="showMessage" type="ShowMessage"/>
