@@ -10,7 +10,8 @@
   
   <component id="border" type="Border">
     <static-binding name="title">Edit Users</static-binding>
-  </component>
+     <field-binding name="simpleTitle" field-name="Boolean.TRUE"/>
+ </component>
   
   <component id="showMessage" type="ShowMessage"/>
   
